--- a/dynamic_inv.yml
+++ b/dynamic_inv.yml
@@ -9,7 +9,7 @@
         groups: dynamic_targets
 
 - name: Executing the playbook on {{ target_host }}
-  hosts: target_host
+  hosts: dynamic_targets
   become: true
   tasks:
    - name: RPC playbook
